fixed small formatting issue with center alignment of lists

--- a/static/style.css
+++ b/static/style.css
@@ -30,3 +30,9 @@ img{
 .topthing{
     margin-top:7vh;
 }
+ol{
+    text-align: left;
+}
+ul{
+    text-align: left;
+}
